--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -71,15 +71,15 @@
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="wrap_content"
-        android:layout_height="300dp"
+        android:layout_height="250dp"
         tools:context="com.example.school.organizer.MapsActivity" />
 
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/btnSave"
             android:onClick="save"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_gravity="bottom|right"
             android:layout_margin="@dimen/fab_margin"
             app:backgroundTint="@color/wallet_holo_blue_light"
