--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,13 +24,14 @@
     <include layout="@layout/content_main" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/btnMakeRoute"
+        android:onClick="makeRoute"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
+        android:layout_gravity="bottom|start"
         android:layout_margin="@dimen/fab_margin"
-        app:backgroundTint="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color"
-        android:src="@android:drawable/ic_input_add" />
+        app:backgroundTint="@color/cast_expanded_controller_background_color"
+        android:src="@android:drawable/ic_dialog_map" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/btnTurnOnOff"
@@ -41,5 +42,14 @@
         android:layout_margin="@dimen/fab_margin"
         app:backgroundTint="@color/cast_expanded_controller_text_color"
         android:src="@android:drawable/ic_lock_power_off" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:backgroundTint="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color"
+        android:src="@android:drawable/ic_input_add" />
 
 </android.support.design.widget.CoordinatorLayout>
