--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -72,7 +72,7 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="wrap_content"
         android:layout_height="250dp"
-        tools:context="com.example.school.organizer.MapsActivity" />
+        tools:context="com.example.school.organizer.activities.MapsActivity" />
 
 
         <android.support.design.widget.FloatingActionButton
